# shared-cmake

./: CMakeLists.txt  MavericksCompatGuard.cmake  MavericksFetch.cmake  MavericksSharedCMakeConfig.cmake  MavericksSparkle.cmake  default.json
scripts/: fetch_sdk.sh  gen_appcast.sh  set_install_floor.sh  sign_and_appcast.sh  stage_updater.sh
tests/: gen_appcast.bats  sign_and_appcast.sh  stage_updater.sh  standalone-include.sh  umbrella-langs.sh
tests/standalone-include/: CMakeLists.txt
updater/: Info.plist.in  agent-load.in  main.m.in  updatecheck.plist.in
